Securing the API: IDP level: - Added new IDP level API resource. - Added InMemory API resources in the IDP configuration. - Instaled the nuget package IdentityServer4.AccessTokenValidation. API level: - Added attribute to secure API endpoint. - Added & Used Authentication middleware. Client level: - Redirect to AccessDenied action when 401 or 403. - Getting AccessToken in the HttpService. - Passing AccessToken as a Bearer token. - Added new API scope in the client configuration.

--- a/ImageGallery/src/ImageGallery.API/Properties/launchSettings.json
+++ b/ImageGallery/src/ImageGallery.API/Properties/launchSettings.json
@@ -7,13 +7,13 @@
       "sslPort": 0
     },
     "iisExpress": {
-      "applicationUrl": "http://localhost:1601/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44329/",
+      "sslPort": 44329
     }
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "Executable",
+      "commandName": "IISExpress",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
