--- a/ImageGallery/src/Company.IDP/Company.IDP.csproj
+++ b/ImageGallery/src/Company.IDP/Company.IDP.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.3.2" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
